OMAPDSS: tc358765: implement registers access via debugfs
Add register access (rw) using debugfs interface via I2C bus.
Register reading via I2C is preferred over DSI, as it's more
reliable, allows reading during video mode transfers, register
access while DSI in HS mode.
So check for I2C connectivity and prefer it over DSI, if possible,
for all read operations.

Change-Id: I1081f2b221536003fb5cae0e8c7f0c65c0be0321
Signed-off-by: Sergiy Kibrik <sergiy.kibrik@globallogic.com>

--- a/drivers/video/omap2/displays/Kconfig
+++ b/drivers/video/omap2/displays/Kconfig
@@ -55,4 +55,9 @@ config PANEL_TC358765
 	select BACKLIGHT_CLASS_DEVICE
 	help
 	  Toshiba TC358765 DSI-2-LVDS chip with 1024x768 panel
+config TC358765_DEBUG
+	bool "Toshiba TC358765 DSI-2-LVDS chip debug"
+	depends on PANEL_TC358765 && DEBUG_FS
+	help
+	  Support of TC358765 DSI-2-LVDS chip register access via debugfs
 endmenu
