OMAP4: blaze_defconfig: Enable HSOTG USB EYE diagram improvements
Change-Id: I17893e249a55111fb468bdb1cb1f5529f50461b7
Signed-off-by: Ruslan Bilovol <ruslan.bilovol@ti.com>

--- a/arch/arm/configs/blaze_defconfig
+++ b/arch/arm/configs/blaze_defconfig
@@ -297,6 +297,7 @@ CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_VBUS_DRAW=500
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_OTG_WAKELOCK=y
+CONFIG_OMAP4_HSOTG_ED_CORRECTION=y
 CONFIG_MMC=y
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_EMBEDDED_SDIO=y
