PVR: Map buffers to GC core MMU on allocation time with Bltsville
This patch makes PVR services to map the allocated buffers with
the PVRSRV_MAP_GC_MMU flag into the GC MMU with the Bltsville
API. Buffers mapped with this flag are meant to be ready for
composition in OMAPLFB.

Change-Id: Ie8284cf6f5b9a566203942d3435b69071aecc3fb
Signed-off-by: Gustavo Diaz Prado <a0273371@ti.com>
Signed-off-by: Tony Lofthouse <a0741364@ti.com>

--- a/drivers/gpu/pvr/Makefile
+++ b/drivers/gpu/pvr/Makefile
@@ -109,6 +109,7 @@ pvrsrvkm-y := \
 	sgx/pb.o
 
 pvrsrvkm-$(CONFIG_ION_OMAP) += ion.o
+pvrsrvkm-$(CONFIG_GCCORE) += gc_bvmapping.o
 
 omaplfb-y := \
 	omaplfb/omaplfb_displayclass.o \
