--- a/arch/arm/mach-omap2/Makefile
+++ b/arch/arm/mach-omap2/Makefile
@@ -273,11 +273,13 @@ obj-$(CONFIG_MACH_OMAP_4430SDP)		+= board-4430sdp.o \
 					   board-blaze-sensors.o \
 					   board-blaze-modem.o \
 					   board-44xx-identity.o \
+					   board-44xx-power.o \
 					   hsmmc.o \
 					   omap_phy_internal.o \
 					   omap4_apps_brd_id.o
 obj-$(CONFIG_MACH_OMAP_BLAZE)		+= board-44xx-tablet.o \
 					   board-44xx-identity.o \
+					   board-44xx-power.o \
 					   board-44xx-tablet-touch.o \
 					   board-44xx-tablet-sensors.o \
 					   board-44xx-tablet-panel.o \
