OMAP4: BOARD: Add serial board file and clean up main board file
Add a board file for the serial devices. Remove serial references
from the main tablet and blaze board files.
This will be only optimization no other features are enabled.

Change-Id: I7c0bd645632c8074526d1f4161ba7ee3bba7f193
Signed-off-by: Eugen Mandrenko <ievgen.mandrenko@ti.com>

--- a/arch/arm/mach-omap2/Makefile
+++ b/arch/arm/mach-omap2/Makefile
@@ -274,12 +274,14 @@ obj-$(CONFIG_MACH_OMAP_4430SDP)		+= board-4430sdp.o \
 					   board-blaze-modem.o \
 					   board-44xx-identity.o \
 					   board-44xx-power.o \
+					   board-44xx-serial.o \
 					   hsmmc.o \
 					   omap_phy_internal.o \
 					   omap4_apps_brd_id.o
 obj-$(CONFIG_MACH_OMAP_BLAZE)		+= board-44xx-tablet.o \
 					   board-44xx-identity.o \
 					   board-44xx-power.o \
+					   board-44xx-serial.o \
 					   board-44xx-tablet-touch.o \
 					   board-44xx-tablet-sensors.o \
 					   board-44xx-tablet-panel.o \
