omaplfb: Split blit functionality into a separate file
In order to more easily maintain the omaplfb driver in different
configurations the BltsVille interface is largely separated from
omaplfb_displayclass.

Any calls to blt services are stubbed out.

Change-Id: I306b4cbc3b9820770b27f7fae55f810e7c2790be
Signed-off-by: Tony Lofthouse <a0741364@ti.com>
Signed-off-by: Gustavo Diaz Prado <a0273371@ti.com>

--- a/drivers/gpu/pvr/Makefile
+++ b/drivers/gpu/pvr/Makefile
@@ -114,6 +114,7 @@ pvrsrvkm-$(CONFIG_GCCORE) += gc_bvmapping.o
 omaplfb-y := \
 	omaplfb/omaplfb_displayclass.o \
 	omaplfb/omaplfb_linux.o
+omaplfb-$(CONFIG_GCBV) += omaplfb/omaplfb_bv.o
 
 obj-$(CONFIG_PVR_SGX) += pvrsrvkm.o
 obj-$(CONFIG_PVR_SGX) += omaplfb.o
