debugging touchscreen irq issue

--- a/arch/arm/configs/otter_android_defconfig
+++ b/arch/arm/configs/otter_android_defconfig
@@ -322,6 +322,7 @@ CONFIG_MACH_OMAP_4430_KC1=y
 CONFIG_OMAP_ALLOW_OSWR=y
 CONFIG_OMAP_FIQ_DEBUGGER=y
 CONFIG_OMAP_REBOOT_REASON=y
+# CONFIG_OMAP_RAM_CONSOLE is not set
 
 #
 # System MMU
@@ -833,6 +834,11 @@ CONFIG_RFKILL=y
 # CONFIG_CEPH_LIB is not set
 
 #
+# CAIF ZOOM2/ZOOM3/BLAZE low level physical drivers
+#
+# CONFIG_CAIF_HSI_OMAP is not set
+
+#
 # Device Drivers
 #
 
@@ -894,6 +900,7 @@ CONFIG_UID_STAT=y
 # CONFIG_BMP085 is not set
 # CONFIG_WL127X_RFKILL is not set
 # CONFIG_APANIC is not set
+# CONFIG_OMAP4_DUTY_CYCLE is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -1652,7 +1659,7 @@ CONFIG_FB_MODE_HELPERS=y
 # CONFIG_FB_VIRTUAL is not set
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_BROADSHEET is not set
-CONFIG_HDMI_TI_4XXX_IP=y
+# CONFIG_HDMI_TI_4XXX_IP is not set
 CONFIG_FB_OMAP_BOOTLOADER_INIT=y
 CONFIG_OMAP2_VRAM=y
 CONFIG_OMAP2_DSS=y
@@ -1662,7 +1669,7 @@ CONFIG_OMAP2_DSS_DEBUG_SUPPORT=y
 CONFIG_OMAP2_DSS_DPI=y
 # CONFIG_OMAP2_DSS_RFBI is not set
 # CONFIG_OMAP2_DSS_VENC is not set
-CONFIG_OMAP4_DSS_HDMI=y
+# CONFIG_OMAP4_DSS_HDMI is not set
 CONFIG_OMAP2_DSS_DSI=y
 CONFIG_OMAP2_DSS_FAKE_VSYNC=y
 CONFIG_OMAP2_DSS_MIN_FCK_PER_PCK=4
@@ -1684,7 +1691,6 @@ CONFIG_FB_OMAP2_NUM_FBS=2
 CONFIG_PANEL_OTTER1=y
 CONFIG_DSSCOMP=y
 CONFIG_DSSCOMP_DEBUG_LOG=y
-# CONFIG_OMAP4_HDCP is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_L4F00242T03 is not set
@@ -1752,9 +1758,14 @@ CONFIG_SND_VERBOSE_PROCFS=y
 CONFIG_SND_SOC=y
 # CONFIG_SND_SOC_CACHE_LZO is not set
 CONFIG_SND_OMAP_SOC=y
-# CONFIG_SND_OMAP_SOC_OMAP4_HDMI is not set
+CONFIG_SND_OMAP_SOC_ABE_DSP=y
+CONFIG_SND_OMAP_SOC_MCBSP=y
+CONFIG_SND_OMAP_SOC_ABE=y
+CONFIG_SND_OMAP_SOC_KC1_AIC3110=y
+CONFIG_SND_OMAP4_ABE_USE_ALT_FW=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
+CONFIG_SND_SOC_AIC3110=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
