--- a/arch/arm/mach-omap2/Kconfig
+++ b/arch/arm/mach-omap2/Kconfig
@@ -375,6 +375,7 @@ config MACH_OMAP_4430_KC1
 	select INPUT_TWL6030_PWRBUTTON
 	select TWL6030_GPADC
 	select OMAP_REBOOT_REASON
+	select REGULATOR_FIXED_VOLTAGE
 
 config MACH_OMAP4_PANDA
 	bool "OMAP4 Panda Board"
