debugging ilitek i2c issue

--- a/arch/arm/configs/otter_android_defconfig
+++ b/arch/arm/configs/otter_android_defconfig
@@ -1498,7 +1498,7 @@ CONFIG_TWL6030_GPADC=y
 CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_DEBUG is not set
 # CONFIG_REGULATOR_DUMMY is not set
-# CONFIG_REGULATOR_FIXED_VOLTAGE is not set
+CONFIG_REGULATOR_FIXED_VOLTAGE=y
 # CONFIG_REGULATOR_VIRTUAL_CONSUMER is not set
 # CONFIG_REGULATOR_USERSPACE_CONSUMER is not set
 # CONFIG_REGULATOR_BQ24022 is not set
@@ -1585,7 +1585,6 @@ CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
 #
 # Miscelaneous helper chips
 #
-# CONFIG_VIDEO_VIVI is not set
 # CONFIG_VIDEO_OMAP_GFX is not set
 # CONFIG_VIDEO_CPIA2 is not set
 # CONFIG_VIDEO_SR030PC30 is not set
@@ -1659,7 +1658,7 @@ CONFIG_FB_MODE_HELPERS=y
 # CONFIG_FB_VIRTUAL is not set
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_BROADSHEET is not set
-# CONFIG_HDMI_TI_4XXX_IP is not set
+CONFIG_HDMI_TI_4XXX_IP=y
 CONFIG_FB_OMAP_BOOTLOADER_INIT=y
 CONFIG_OMAP2_VRAM=y
 CONFIG_OMAP2_DSS=y
@@ -1669,7 +1668,7 @@ CONFIG_OMAP2_DSS_DEBUG_SUPPORT=y
 CONFIG_OMAP2_DSS_DPI=y
 # CONFIG_OMAP2_DSS_RFBI is not set
 # CONFIG_OMAP2_DSS_VENC is not set
-# CONFIG_OMAP4_DSS_HDMI is not set
+CONFIG_OMAP4_DSS_HDMI=y
 CONFIG_OMAP2_DSS_DSI=y
 CONFIG_OMAP2_DSS_FAKE_VSYNC=y
 CONFIG_OMAP2_DSS_MIN_FCK_PER_PCK=4
@@ -1691,6 +1690,8 @@ CONFIG_FB_OMAP2_NUM_FBS=2
 CONFIG_PANEL_OTTER1=y
 CONFIG_DSSCOMP=y
 CONFIG_DSSCOMP_DEBUG_LOG=y
+CONFIG_OMAP4_HDCP=y
+# CONFIG_OMAP4_HDCP_DEBUG is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_L4F00242T03 is not set
@@ -1716,20 +1717,7 @@ CONFIG_BACKLIGHT_GENERIC=y
 # Console display driver support
 #
 CONFIG_DUMMY_CONSOLE=y
-CONFIG_FRAMEBUFFER_CONSOLE=y
-# CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY is not set
-# CONFIG_FRAMEBUFFER_CONSOLE_ROTATION is not set
-CONFIG_FONTS=y
-CONFIG_FONT_8x8=y
-CONFIG_FONT_8x16=y
-# CONFIG_FONT_6x11 is not set
-# CONFIG_FONT_7x14 is not set
-# CONFIG_FONT_PEARL_8x8 is not set
-# CONFIG_FONT_ACORN_8x8 is not set
-# CONFIG_FONT_MINI_4x6 is not set
-# CONFIG_FONT_SUN8x16 is not set
-# CONFIG_FONT_SUN12x22 is not set
-# CONFIG_FONT_10x18 is not set
+# CONFIG_FRAMEBUFFER_CONSOLE is not set
 # CONFIG_LOGO is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
@@ -1762,6 +1750,7 @@ CONFIG_SND_OMAP_SOC_ABE_DSP=y
 CONFIG_SND_OMAP_SOC_MCBSP=y
 CONFIG_SND_OMAP_SOC_ABE=y
 CONFIG_SND_OMAP_SOC_KC1_AIC3110=y
+# CONFIG_SND_OMAP_SOC_OMAP4_HDMI is not set
 CONFIG_SND_OMAP4_ABE_USE_ALT_FW=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
